--- a/index.html
+++ b/index.html
@@ -7,37 +7,45 @@
   <body>
     <div class="banner">
       <h1>Broadway Design</h1>
-      <p><a href="#Home">Home</a></p>
+      <p><a href="#">Home</a></p>
       <p><a href="#Process">Process</a></p>
       <p><a href="#Work">Work</a></p>
       <p><a href="#Team">Team</a></p>
       <p><a href="#Contact">Contact</a></p>
     </div>
-    <h2>Our process</h2>
-    <img src="./resources/images/identify.svg" />
-    <h3>Identify</h3>
-    <p>Focus on the most important details.</p>
-    <img src="./resources/images/understand.svg" />
-    <h3>Understand</h3>
-    <p>We study our projects inside and out.</p>
-    <img src="./resources/images/execute.svg" />
-    <h3>Exexute</h3>
-    <p>We put everything we have into your work.</p>
-    <div class="banner">
-      <h3 class="whiteForeground">Designed in New York</h3>
+    <div id="Process">
+      <h2>Our process</h2>
+      <img src="./resources/images/identify.svg" />
+      <h3>Identify</h3>
+      <p>Focus on the most important details.</p>
+      <img src="./resources/images/understand.svg" />
+      <h3>Understand</h3>
+      <p>We study our projects inside and out.</p>
+      <img src="./resources/images/execute.svg" />
+      <h3>Exexute</h3>
+      <p>We put everything we have into your work.</p>
     </div>
-    <h3>Portfolio</h3>
-    <p>Coming soon.</p>
-    <h3>Team</h3>
-    <p>We're Hiring!</p>
-    <h3>Contact</h3>
-    <p>Phone: (555)-555-5555</p>
-    <p>E-mail: test@example.com</p>
-    <p>Twitter: @test</p>
+    <div id="Work">
+      <div class="banner">
+        <h3>Designed in New York</h3>
+      </div>
+      <h3>Portfolio</h3>
+      <p>Coming soon.</p>
+    </div>
+    <div id="Team">
+      <h3>Team</h3>
+      <p>We're Hiring!</p>
+    </div>
+    <div id="Contact">
+      <h3>Contact</h3>
+      <p>Phone: (555)-555-5555</p>
+      <p>E-mail: test@example.com</p>
+      <p>Twitter: @test</p>
+    </div>
     <p class="footer">
       &copy; Broadway 2016
-      <a href="#Home">Home</a>
-      <a href="#About">About</a>
+      <a href="#">Home</a>
+      <a href="#Process">Process</a>
       <a href="#Work">Work</a>
       <a href="#Team">Team</a>
       <a href="#Contact">Contact</a>
