--- a/index.html
+++ b/index.html
@@ -42,13 +42,15 @@
       <p>E-mail: test@example.com</p>
       <p>Twitter: @test</p>
     </div>
-    <p class="footer">
-      &copy; Broadway 2016
-      <a href="#">Home</a>
-      <a href="#Process">Process</a>
-      <a href="#Work">Work</a>
-      <a href="#Team">Team</a>
-      <a href="#Contact">Contact</a>
-    </p>
+    <footer>
+      <p>
+        &copy; Broadway 2016
+        <a href="#">Home</a>
+        <a href="#Process">Process</a>
+        <a href="#Work">Work</a>
+        <a href="#Team">Team</a>
+        <a href="#Contact">Contact</a>
+      </p>
+    </footer>
   </body>
 </html>
